# FixedPointCalc

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: fixed.cpp  fixed.hpp  main.cpp  parser.cpp  parser.hpp  repl.cpp  repl.hpp  session.cpp  session.hpp
tests/: CMakeLists.txt  run_cli_tests.sh
tests/examples/: basic.fpc  literals.fpc  overflow.fpc  rounding.fpc  shifts.fpc
